--- a/template/{{cookiecutter.project_slug}}/Makefile
+++ b/template/{{cookiecutter.project_slug}}/Makefile
@@ -4,7 +4,12 @@
 install:
 	uv sync --directory backend --dev
 {%- if cookiecutter.enable_precommit %}
-	uv run --directory backend pre-commit install
+	@if git rev-parse --git-dir > /dev/null 2>&1; then \
+		uv run --directory backend pre-commit install; \
+	else \
+		echo "⚠️  Not a git repository - skipping pre-commit install"; \
+		echo "   Run 'git init && make install' to set up pre-commit hooks"; \
+	fi
 {%- endif %}
 	@echo ""
 	@echo "✅ Installation complete!"
