--- a/template/{{cookiecutter.project_slug}}/backend/pyproject.toml
+++ b/template/{{cookiecutter.project_slug}}/backend/pyproject.toml
@@ -161,3 +161,7 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
+[tool.{{ cookiecutter.generator_name }}]
+generator_version = "{{ cookiecutter.generator_version }}"
+generated_at = "{{ cookiecutter.generated_at }}"
